20240812 - feat: axios 설치 및 게시판 앱 기초 틀 구성

--- a/app/globals.module.css
+++ b/app/globals.module.css
@@ -29,3 +29,8 @@
   border-radius: 5px;
   overflow: hidden;
 }
+
+.linkImage:hover {
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
