--- a/app/postApp/postApp.module.css
+++ b/app/postApp/postApp.module.css
@@ -135,3 +135,79 @@
 .postComment div:last-child {
   margin-bottom: 0;
 }
+
+.createPost {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f7f7f7;
+  padding: 40px;
+  border-radius: 15px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.createPost h1 {
+  margin-bottom: 24px;
+  color: black;
+  text-align: center;
+}
+
+.createFrom {
+  width: 100%;
+}
+
+.containerTitle,
+.containerBody {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.containerTitle label,
+.containerBody label {
+  margin-bottom: 8px;
+  font-weight: 600;
+  color: #555555;
+}
+
+.createForm input[type="text"],
+.createForm textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #333;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.createForm input[type="text"]:focus,
+.createForm textarea:focus {
+  border-color: #888;
+  outline: none;
+}
+
+.createForm textarea {
+  height: 150px;
+  resize: none;
+}
+
+.createPostBtn {
+  width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  padding: 12px;
+  border: none;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.createPostBtn:hover {
+  background-color: #0056b3;
+}
