--- a/app/postApp/postApp.module.css
+++ b/app/postApp/postApp.module.css
@@ -64,6 +64,39 @@
   border-color: #0056b3;
 }
 
+.postHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #ddd;
+  min-width: 600px;
+}
+
+.headerBtn {
+  left: 20px;
+  padding: 8px 16px;
+  background-color: #0070f3;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.headerBtn:hover {
+  background-color: #005bb5;
+}
+
+.headerTitle {
+  font-size: 1.5rem;
+  color: black;
+  text-align: center;
+  margin: 0;
+  flex-grow: 1;
+}
+
 .PostList {
   display: flex;
   flex-direction: column;
@@ -127,7 +160,7 @@
   color: #888;
 }
 
-.post button {
+.postDelBtn {
   background-color: #e74c3c;
   color: white;
   border: none;
@@ -137,7 +170,7 @@
   transition: background-color 0.3s ease;
 }
 
-.post button:hover {
+.postDelBtn:hover {
   background-color: #c0392b;
 }
 
@@ -166,7 +199,7 @@
   background-color: #f7f7f7;
   padding: 40px;
   border-radius: 15px;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
