--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,13 +1,38 @@
 .body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
   background-color: #363636;
   color: #ececec;
   line-height: 1.6;
   min-height: 100vh;
   padding: 20px;
+}
+
+.myInfo {
+  padding: 0 10px;
+  border: 2px solid #ececec;
+  border-radius: 5px;
+}
+
+.myInfo h1 {
+  text-align: center;
+}
+
+.myInfo li {
+  margin-bottom: 10px;
+  padding-left: 10px;
+  list-style: circle;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.myInfo li:hover {
+  font-weight: bold;
+  transform: translateY(-5px);
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.myInfo li:last-of-type {
+  border: none;
 }
 
 .linkContainer {
